--- a/arch/arm/mach-omap2/Makefile
+++ b/arch/arm/mach-omap2/Makefile
@@ -230,5 +230,6 @@ smc91x-$(CONFIG_SMC91X)			:= gpmc-smc91x.o
 obj-y					+= $(smc91x-m) $(smc91x-y)
 obj-$(CONFIG_ARCH_OMAP4)		+= hwspinlocks.o
 obj-$(CONFIG_OMAP_HSI_DEVICE)           += omap_hsi.o
+obj-$(CONFIG_ION_OMAP)			+= omap_ion.o
 obj-$(CONFIG_ARCH_OMAP3)		+= twl4030.o
 obj-$(CONFIG_MACH_LGE_OMAP3) += lge/
