--- a/drivers/net/wireless/bcm4329/Kconfig
+++ b/drivers/net/wireless/bcm4329/Kconfig
@@ -25,3 +25,11 @@ config BCM4329_NVRAM_PATH
 	default "/proc/calibration"
 	---help---
 	  Path to the calibration file.
+
+config BCM4329_DISABLE_PM_MAX
+	bool "Disable PM_MAX power state state"
+	depends on BCM4329
+	default y
+	---help---
+	  Disable PM_MAX state and use PM_FAST instead for
+	  fast wifi whilst device is in early suspend.
