--- a/arch/arm/configs/knzo_p970_defconfig
+++ b/arch/arm/configs/knzo_p970_defconfig
@@ -138,6 +138,7 @@ CONFIG_SLUB=y
 # CONFIG_SLOB is not set
 # CONFIG_PROFILING is not set
 CONFIG_HAVE_OPROFILE=y
+# CONFIG_KPROBES is not set
 CONFIG_HAVE_KPROBES=y
 CONFIG_HAVE_KRETPROBES=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
@@ -430,7 +431,7 @@ CONFIG_MIGRATION=y
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
-# CONFIG_KSM is not set
+CONFIG_KSM=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_NEED_PER_CPU_KM=y
 # CONFIG_CLEANCACHE is not set
@@ -929,7 +930,7 @@ CONFIG_UID_STAT=y
 # CONFIG_BMP085 is not set
 # CONFIG_WL127X_RFKILL is not set
 # CONFIG_APANIC is not set
-# CONFIG_GP2AP_PROXIMITY is not set
+CONFIG_GP2AP_PROXIMITY=y
 CONFIG_TSPDRV=y
 # CONFIG_C2PORT is not set
 
@@ -950,9 +951,9 @@ CONFIG_TSPDRV=y
 # CONFIG_SENSORS_LIS3_SPI is not set
 # CONFIG_SENSORS_LIS3_I2C is not set
 # CONFIG_GC_CORE is not set
-# CONFIG_MPU_SENSORS_MPU3050 is not set
-# CONFIG_MPU_SENSORS_KXTF9 is not set
-# CONFIG_MPU_SENSORS_AK8975 is not set
+CONFIG_MPU_SENSORS_MPU3050=y
+CONFIG_MPU_SENSORS_KXTF9=y
+CONFIG_MPU_SENSORS_AK8975=y
 
 #
 # LGE Justin/Black Sensor Drivers
@@ -961,12 +962,7 @@ CONFIG_TSPDRV=y
 #
 # Sensors
 #
-CONFIG_BJ_SENSORS=y
-CONFIG_BJ_PROXI_SENSOR=y
-CONFIG_BJ_KXTF9_SENSOR=y
-CONFIG_BJ_COMPASS_SENSOR=y
-CONFIG_BJ_MPU3050_SENSOR=y
-CONFIG_BJ_MOTION_SENSOR=y
+# CONFIG_BJ_SENSORS is not set
 CONFIG_HAVE_IDE=y
 # CONFIG_IDE is not set
 
@@ -1309,6 +1305,7 @@ CONFIG_I2C_OMAP=y
 #
 # Other I2C/SMBus bus drivers
 #
+# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
 # CONFIG_I2C_DEBUG_BUS is not set
@@ -1552,6 +1549,7 @@ CONFIG_IR_LIRC_CODEC=y
 # CONFIG_IR_REDRAT3 is not set
 # CONFIG_IR_STREAMZAP is not set
 # CONFIG_RC_LOOPBACK is not set
+# CONFIG_MEDIA_ATTACH is not set
 CONFIG_MEDIA_TUNER=y
 # CONFIG_MEDIA_TUNER_CUSTOMISE is not set
 CONFIG_MEDIA_TUNER_SIMPLE=y
@@ -2142,6 +2140,7 @@ CONFIG_EXT4_USE_FOR_EXT23=y
 # CONFIG_EXT4_DEBUG is not set
 CONFIG_JBD2=y
 # CONFIG_JBD2_DEBUG is not set
+CONFIG_FS_MBCACHE=y
 # CONFIG_REISERFS_FS is not set
 # CONFIG_JFS_FS is not set
 # CONFIG_XFS_FS is not set
@@ -2187,6 +2186,9 @@ CONFIG_PROC_FS=y
 CONFIG_PROC_SYSCTL=y
 CONFIG_PROC_PAGE_MONITOR=y
 CONFIG_SYSFS=y
+CONFIG_TMPFS=y
+# CONFIG_TMPFS_POSIX_ACL is not set
+# CONFIG_TMPFS_XATTR is not set
 # CONFIG_HUGETLB_PAGE is not set
 # CONFIG_CONFIGFS_FS is not set
 CONFIG_MISC_FILESYSTEMS=y
@@ -2346,6 +2348,8 @@ CONFIG_DEBUG_INFO=y
 # CONFIG_FRAME_POINTER is not set
 # CONFIG_BOOT_PRINTK_DELAY is not set
 # CONFIG_RCU_TORTURE_TEST is not set
+CONFIG_RCU_CPU_STALL_TIMEOUT=60
+CONFIG_RCU_CPU_STALL_VERBOSE=y
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_DEBUG_BLOCK_EXT_DEVT is not set
 # CONFIG_DEBUG_FORCE_WEAK_PER_CPU is not set
@@ -2417,6 +2421,7 @@ CONFIG_CRYPTO_MANAGER_DISABLE_TESTS=y
 CONFIG_CRYPTO_WORKQUEUE=y
 # CONFIG_CRYPTO_CRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
+# CONFIG_CRYPTO_TEST is not set
 
 #
 # Authenticated Encryption with Associated Data
